# typst-gather

./: Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
plans/: init-config.md  stage-parsing.md
src/: lib.rs  main.rs
tests/: integration.rs
