[package]
name = "typst-gather"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/quarto-dev/typst-gather"
rust-version = "1.81"

[dependencies]
typst-kit = { version = "0.14.2", features = ["packages"] }
typst-syntax = "0.14.2"
ecow = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
walkdir = "2"
globset = "0.4"
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = []
vendored-openssl = ["openssl"]

[dev-dependencies]
tempfile = "3"
serde_json = "1"
